add a great template

--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
   <title>Ayano app</title>
   <script src="https://cdn.bootcss.com/react/15.6.1/react.js" charset="utf-8"></script>
   <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.js" charset="utf-8"></script>
+  <script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js" charset="utf-8"></script>
 </head>
 <body>
 <div id="root"></div>
