--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayano app</title>
+  <title>ayano app</title>
   <script src="https://cdn.bootcss.com/react/15.6.1/react.js" charset="utf-8"></script>
   <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.js" charset="utf-8"></script>
   <script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js" charset="utf-8"></script>
+  <script src="https://img.maihaoche.com/mhc_fe_app/hd-solution.js" charset="utf-8"></script>
 </head>
 <body>
 <div id="root"></div>
